--- a/style.css
+++ b/style.css
@@ -3,15 +3,49 @@
     background-color: black;
 }
 
+.container{
+    margin-top: auto;
+    margin-left: auto;
+    margin-right:auto;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+  }
+
+.h1{
+    font-size: 24px;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  }
+
+  .h2{
+    font-size: 24px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-left: 100px;
+    margin-right: 100px;
+  }
+
+.img{
+    width: 75px;
+    height: 75px;
+    margin-top: auto;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: auto;
+  }
+
 .div1{
+display: flex;
 width: 800px;
 height: 500px;
 margin-left: auto;
 margin-right: auto;
-margin-top: auto;
+margin-bottom: 100px;
 background-color: azure;
-border-radius: 5px;
-border-color: aqua;
+border-radius: 5%;
+border-color: rgb(2, 54, 9);
 }
 
 .div2{
