--- a/style.css
+++ b/style.css
@@ -4,41 +4,55 @@
 }
 
 .container{
-    margin-top: auto;
-    margin-left: auto;
-    margin-right:auto;
       display: grid;
       grid-template-columns: repeat(2, 1fr);
+      grid-gap: 1rem;
+      grid-template-rows: 300px repeat(auto-fill,100px);
   }
 
-.h1{
+h1{
     font-size: 24px;
+    color: aqua;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin-left: 1000px;
+    display: inline;
+    margin-right: auto;
+    margin-top: auto;
+  }
+  h4{
+    font-size: 24px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin-left: 650px;
+    margin-right: auto;
+    margin-top: auto;
+    display: inline;
+    color: aqua;
+  }
+
+  h2{
+    font-size: 24px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: center;
+    margin-top: auto;
+    margin-bottom: auto;
     margin-left: auto;
     margin-right: auto;
-    text-align: center;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  }
-
-  .h2{
-    font-size: 24px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    margin-left: 100px;
-    margin-right: 100px;
     
   }
 .img2{
   width: 100px;
   height: 100px;
-  margin-top: 150px;
+ margin-top: auto;
+ margin-bottom: auto;
   margin-left: auto;
   margin-right: auto;
+  justify-content: space-around;
 }
 h3{
-  margin-top: 300px;
-  margin-left: auto;
-  margin-right: 200px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-align: center;
+  color: aqua;
+  
 }
 
 span{
@@ -52,23 +66,22 @@ span{
 .img{
     width: 50px;
     height: 50px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 100px;
+    align-self: center;
   }
 
   button{
     width: 100px;
     height: 100px;
+    margin-top: auto;
+    margin-bottom: auto;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 100px;
-  }
+    }
 
 .div1{
-display: flex;
 width: 800px;
-height: 500px;
+height: 400px;
+display: flex;
 margin-left: auto;
 margin-right: auto;
 margin-bottom: 100px;
@@ -79,21 +92,22 @@ border: 5px solid rgb(20, 6, 146);
 .div2{
 width: 400px;
 height: 400px;
-margin-left: auto;
+position: relative;
 display: flex;
+margin-left: auto;
 margin-top: auto;
 background-color: azure;
 border: 5px solid rgb(20, 6, 146);
-
 }
 
 .div3{
     width: 400px;
     height: 400px;
-    display: flex;
     margin-right: auto;
     margin-top: auto;
+    display: flex;
     background-color: azure;
+    position: relative;
     border: 5px solid rgb(20, 6, 146);
 }
 
